--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,9 @@ gap: 24px;}
         padding-bottom: 32px;}
 
     /*----------------footer-------------*/
-        .footer {background: #2e2f42;}
+        .footer {background: #2e2f42;
+        width: 1440px;
+            height: 312px;}
     
         .footer-logo {font-family: "Raleway", sans-serif;
             font-weight: 700;
@@ -315,6 +317,9 @@ gap: 24px;}
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: #4d5ae5;
+            padding-top: 99px;
+            padding-bottom: 16px;
+            display: flex;
 
             }
 
@@ -327,4 +332,7 @@ gap: 24px;}
                 line-height: 1.5;
                 letter-spacing: 0.02em;
                 color: #f4f4fd;
+                width: 264px;
+                display: flex;
+                padding-bottom: 101px;
         }
