--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ background: #4d5ae5;}
 /*-------------header--------------*/
 .header {
     border-bottom: 1px solid #e7e9fc;
+    padding: 24px 0;;
 }
 .container{ max-width: 1158px;
 padding-left: 15px;
@@ -75,7 +76,7 @@ margin: 0 auto;}
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
-        margin-right: 78px;
+        margin-right: 76px;
 }
 
 
@@ -84,7 +85,8 @@ margin: 0 auto;}
     
 
 .heder-menu-list{display: flex;
-gap: 40px;}
+gap: 40px;
+}
 
 
 .heder-menu-item {
@@ -93,7 +95,7 @@ gap: 40px;}
     line-height: 1.5;
     letter-spacing: 0.02em;
         color: #2e2f42;
-        padding: 24px 0;
+        
         display: block;
 }
 
@@ -136,7 +138,7 @@ gap: 40px;}
 
 .secnion-hero {
     background: #2e2f42;
-    padding: 188px 472px;
+    padding: 188px 0;
 }
 
 .hero 
@@ -146,21 +148,18 @@ gap: 40px;}
         letter-spacing: 0.02em;
         color: #fff;
         text-align: center;
-    margin-bottom: 48px;}
-
-        .container-title{width: 496px;}
-
-.container-btn {
-        display: flex;
-    justify-content: center;
-   
+width: 496px;
+margin: 0 auto;
 }
+
 
 .hero-order-btn:hover, .hero-order-btn:focus {
     background-color: #404bbf;
 }
 
 .hero-order-btn {
+    border: none;
+        display: block;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -169,24 +168,33 @@ gap: 40px;}
         font-family: inherit;
     border-radius: 4px;
         padding: 16px 32px;
-        
+ min-width: 169px;
+            height: 56px;
+            background-color:#4d5ae5;
+            margin: 0 auto;
+            
+
        }
 
     
 
 
 /*--------------skills---------------*/
-.section-skills{padding-top: 106px;
-    padding-bottom: 107px;
+.section-skills{padding: 120px 0;
     
 }
 
 .skills {
-    visibility: hidden;
-    color: #2e2f42;
+        position: absolute !important;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+        clip: rect(1px, 1px, 1px, 1px);
+        /* Для старых версий IE */
+        clip-path: inset(50%);
+        white-space: nowrap;
     
-        
-}
+    color: #2e2f42;}
 
 .skills-list {display: flex;
 gap: 24px;}
@@ -212,13 +220,8 @@ gap: 24px;}
 
 /*--------------------team-----------*/
 .section-tem{background: #f4f4fd;
-    
-    
-}
-
-.team {
-
-        font-weight: 700;
+    padding: 120px 0;}
+.team{ font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
         letter-spacing: 0.02em;
@@ -226,24 +229,15 @@ gap: 24px;}
         color: #2e2f42;
         text-transform: capitalize;
         margin-bottom: 72px;
-        padding-top: 120px;
-        
-}
- 
-
-.team-list {display: flex;
+        padding-top: 120px;}
+ .team-list {display: flex;
     gap: 24px;
-    padding-bottom: 120px;
-    
-    
-}
-
-
-
-.team-items {background-color: #fff;}
-
-.team-img { margin-bottom: 32px;}
-
+    padding-bottom: 120px;}
+.team-items {background-color: #fff;
+width: calc((100% - 72px) / 4)
+border-radius: 0px 0px 4px 4px;}
+.team-img { }
+.container-team{padding: 32px 0}
 .clas {}
 
 
@@ -262,12 +256,14 @@ gap: 24px;}
 .team-text{font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
     text-align: center;
+    
     
         }
     /*-------------------------------------------portfolio------------------------*/
-        .portfolio
+         .section-portfolio{padding-top: 120px;
+            padding-bottom: 120px;}
+    .portfolio
         {  font-weight: 700;
                 font-size: 36px;
                 line-height: 1.11;
@@ -275,19 +271,20 @@ gap: 24px;}
                 color: #2e2f42;
                 text-align: center;
                 text-transform: capitalize;
-                padding-top: 120px;
-                padding-bottom: 72px;
-        }
-    
-        .portfolio-list {display: flex;
+                margin-bottom: 72px }
+     .portfolio-list {display: flex;
             flex-wrap: wrap;
         gap: 24px;
-    padding-bottom: 121px;}
+        row-gap: 48px;}
+        .container-portfolio{padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+        border-top: none;
+    }
             
     
-        .portfolio-list-item {}
+        .portfolio-list-item {width: calc((100% - 48px) / 3);}
     
-        .portfolio-img {margin-bottom: 32px;}
+        .portfolio-img {}
     
         .portfolio-title { 
                 font-weight: 500;
@@ -297,18 +294,19 @@ gap: 24px;}
                 color: #2e2f42;
                 text-transform: capitalize;
                 margin-bottom: 8px;
+            
         }
     
         .portfolio-text {
             font-size: 16px;
             line-height: 1.5;
             letter-spacing: 0.02em;
-        padding-bottom: 32px;}
+        }
 
     /*----------------footer-------------*/
         .footer {background: #2e2f42;
-        width: 1440px;
-            height: 312px;}
+            padding: 100px 0;
+       }
     
         .footer-logo {font-family: "Raleway", sans-serif;
             font-weight: 700;
@@ -317,9 +315,8 @@ gap: 24px;}
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: #4d5ae5;
-            padding-top: 99px;
-            padding-bottom: 16px;
-            display: flex;
+            display: inline-block;
+            margin-bottom: 16px;
 
             }
 
@@ -334,5 +331,4 @@ gap: 24px;}
                 color: #f4f4fd;
                 width: 264px;
                 display: flex;
-                padding-bottom: 101px;
         }
