--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ background: #4d5ae5;}
 /*-------------header--------------*/
 .header {
     border-bottom: 1px solid #e7e9fc;
-    padding: 24px 0;;
+
 }
 .container{ max-width: 1158px;
 padding-left: 15px;
@@ -77,6 +77,7 @@ margin: 0 auto;}
         text-transform: uppercase;
         color: #4d5ae5;
         margin-right: 76px;
+        padding: 24px 0;
 }
 
 
@@ -184,16 +185,17 @@ margin: 0 auto;
     
 }
 
-.skills {
-        position: absolute !important;
-        height: 1px;
-        width: 1px;
-        overflow: hidden;
-        clip: rect(1px, 1px, 1px, 1px);
-        /* Для старых версий IE */
-        clip-path: inset(50%);
-        white-space: nowrap;
-    
+.visually-hidden {
+    position: absolute !important;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    white-space: nowrap; 
     color: #2e2f42;}
 
 .skills-list {display: flex;
@@ -233,9 +235,12 @@ gap: 24px;}
  .team-list {display: flex;
     gap: 24px;
     padding-bottom: 120px;}
-.team-items {background-color: #fff;
-width: calc((100% - 72px) / 4)
+    
+.team-items
+ {background-color: #fff;
+width: calc((100% - 72px) / 4);
 border-radius: 0px 0px 4px 4px;}
+
 .team-img { }
 .container-team{padding: 32px 0}
 .clas {}
