--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,9 @@ background: #4d5ae5;}
 
 /*-------------header--------------*/
 .header {
-    border-bottom: 1px solid #e7e9fc;
 
+    border-bottom: 1px solid #e7e9fc;
+padding: 24px 0;
 }
 .container{ max-width: 1158px;
 padding-left: 15px;
@@ -78,6 +79,7 @@ margin: 0 auto;}
         color: #4d5ae5;
         margin-right: 76px;
         padding: 24px 0;
+       
 }
 
 
@@ -106,6 +108,7 @@ gap: 40px;
 
 .header-href {
     color: #2e2f42;
+    padding: 24px 0;
     }
     
 
@@ -149,7 +152,7 @@ gap: 40px;}
         letter-spacing: 0.02em;
         color: #fff;
         text-align: center;
-width: 496px;
+max-width: 496px;
 margin: 0 auto;
 }
 
@@ -186,17 +189,17 @@ margin: 0 auto;
 }
 
 .visually-hidden {
-    position: absolute !important;
+    position: absolute;
     width: 1px;
     height: 1px;
     margin: -1px;
     border: 0;
     padding: 0;
-    overflow: hidden;
+    white-space: nowrap;
+    clip-path: inset(100%);
     clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    white-space: nowrap; 
-    color: #2e2f42;}
+    overflow: hidden;
+}
 
 .skills-list {display: flex;
 gap: 24px;}
