--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,9 @@ gap: 40px;}
         color: #fff;
         text-align: center;
 max-width: 496px;
-margin: 0 auto;
+margin-left:  auto;
+margin-right: auto;
+border-block-start: 48px;
 }
 
 
