--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,8 @@ width: 264px;
 
 .icon-skills{display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center; 
+padding: 24px 100px;}
 
 .visually-hidden {
     position: absolute;
@@ -353,7 +354,8 @@ align-items: center;}
      .portfolio-list {display: flex;
             flex-wrap: wrap;
         gap: 24px;
-        row-gap: 48px;}
+        row-gap: 48px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
         .container-portfolio{padding: 32px 16px;
         border: 1px solid #e7e9fc;
         border-top: none;
@@ -396,11 +398,12 @@ align-items: center;}
             width: 360px;
                 height: 300px;
                 display: flex;
-                padding: 40px 32px 164px 32px;
+               
         position: absolute;
         top: 0;
         transform: translateY(100%);
-            transition: transform 300ms ease;
+            padding: 40px 32px;
+         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
         
 
