--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ background: #4d5ae5;}
 
 /*-------------header--------------*/
 .header {
+box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 
     border-bottom: 1px solid #e7e9fc;
 
@@ -102,7 +103,8 @@ gap: 40px;
         display: block;
 }
 .current{position: relative;
-color:#404bbf;
+    color: #404bbf;
+
 }
 
 .current::after{
@@ -158,10 +160,10 @@ gap: 40px;}
 .secnion-hero {
     background: #2e2f42;
     padding: 188px 0;
-    width: 1440px;
+    max-width: 1440px;
         height: 600px;
         margin: 0 auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1-min.png);
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;}
@@ -202,7 +204,7 @@ border-block-start: 48px;
             height: 56px;
             background-color:#4d5ae5;
             margin: 0 auto;
-            
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
        }
 
@@ -303,12 +305,15 @@ gap: 24px;
 margin-bottom: 32px;
 padding-left: 16px;
 padding-right: 16px;}
+.icon {fill:color white;
+
+}
 
 .icon-item {display: flex;
     }
 
 .icon-href {display: flex;
-background-color:#4D5AE5;
+background-color: #4D5AE5;
 border-radius: 50%;
 width: 40px;
 height: 40px;
