--- a/css/style.css
+++ b/css/style.css
@@ -98,34 +98,39 @@ gap: 40px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-        color: #2e2f42;
+        
         
         display: block;
 }
-.current{position: relative;
-    color: #404bbf;
-
-}
-
-.current::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-border-radius: 2px;
-background-color:#404bbf;
-width:100%;
-height: 4px;}
-
-.header-href:hover, .header-href:focus {
-    color: #404bbf;
-}
-
 .header-href {
     color: #2e2f42;
     padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+}
+.header-href:hover,
+.header-href:focus {
+    color: #404BBF;
+}
+.current {
+    position: relative;
+    color: #404BBF;
+
+}
+.current::after {
+    content:"";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404BBF;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;}
+
+
+
+
+
+
     
 
 
@@ -222,11 +227,12 @@ border-block-start: 48px;
 margin-bottom: 8px;
 display: flex;
 width: 264px;
-    height: 112px;}
+    height: 112px;
+justify-content: center;
+align-items: center;}
 
 .icon-skills{display: flex;
-    justify-content: center;
-    align-items: center; 
+    
 padding: 24px 100px;}
 
 .visually-hidden {
