--- a/css/style.css
+++ b/css/style.css
@@ -397,9 +397,11 @@ align-items: center;}
 
 .container-wrapper-portfolio{position: relative;
     overflow: hidden;}
-                .portfolio-list-item:hover .portfolio-cover-text{transform: translateY(0)}
+    .portfolio-list-item:hover .portfolio-cover-text{transform: translateY(0);
+     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        }
 
-                .portfolio-cover-text{font-weight: 400;
+.portfolio-cover-text{font-weight: 400;
                     font-size: 16px;
                     line-height: 1.5;
                     letter-spacing: 0.02em;
@@ -408,14 +410,14 @@ align-items: center;}
             width: 360px;
                 height: 300px;
                 display: flex;
-               
+        
         position: absolute;
         top: 0;
         transform: translateY(100%);
             padding: 40px 32px;
          transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-        
+        .first{transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
     /*----------------footer-------------*/
         .footer {background: #2e2f42;
