--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ align-items: center;}
             
     
         .portfolio-list-item {width: calc((100% - 48px) / 3);
+            transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
     
         .portfolio-img {}
@@ -397,9 +398,11 @@ align-items: center;}
 
 .container-wrapper-portfolio{position: relative;
     overflow: hidden;}
-    .portfolio-list-item:hover .portfolio-cover-text{transform: translateY(0);
-     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-        }
+    .portfolio-list-item:hover .portfolio-cover-text{transform: translateY(0); }
+
+          .portfolio-list-item:hover{ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);}
 
 .portfolio-cover-text{font-weight: 400;
                     font-size: 16px;
@@ -417,7 +420,7 @@ align-items: center;}
             padding: 40px 32px;
          transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-        .first{transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+        
 
     /*----------------footer-------------*/
         .footer {background: #2e2f42;
