--- a/css/style.css
+++ b/css/style.css
@@ -299,10 +299,12 @@ justify-content: center;
 .team-items
  {background-color: #fff;
 width: calc((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px;}
-
+border-radius: 0px 0px 4px 4px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    }
+.container-icon-social{}
 .team-img { }
-.container-team{}
+.container-team{padding: 32px 0;}
 
 .icon-list {display: flex;
     justify-content: center;
@@ -456,7 +458,7 @@ align-items: center;}
 
                 .container-footer-logo{}
 
-        .footer-container-icon{;
+        .footer-container-icon{
         }
 .container-title-footer{display: inline;}
                 .footer-title{
