--- a/css/style.css
+++ b/css/style.css
@@ -309,14 +309,15 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 .icon-list {display: flex;
     justify-content: center;
 gap: 24px;
-margin-bottom: 32px;
+
 padding-left: 16px;
 padding-right: 16px;}
-.icon {fill:color white;
+.icon {fill:#f4f4fd;
 
 }
 
 .icon-item {display: flex;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .icon-href {display: flex;
@@ -326,6 +327,8 @@ width: 40px;
 height: 40px;
 justify-content: center;
 align-items: center;}
+.icon-href:hover,
+.icon-href:focus {background-color: #404bbf;}
 
 
 
@@ -339,7 +342,7 @@ align-items: center;}
         text-transform: capitalize;
         text-align: center;
     margin-bottom: 8px;
-    margin-top: 32px;
+    
         
 }
 
