--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ padding-right: 16px;}
 
 .icon-item {display: flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); }
 
 .icon-href {display: flex;
 background-color: #4D5AE5;
