--- a/css/style.css
+++ b/css/style.css
@@ -311,14 +311,16 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 gap: 24px;
 
 padding-left: 16px;
-padding-right: 16px;}
+padding-right: 16px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
 .icon {fill:#f4f4fd;
 
 }
 
 .icon-item {display: flex;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); }
+    
+}
 
 .icon-href {display: flex;
 background-color: #4D5AE5;
