--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ justify-content: center;
 width: calc((100% - 72px) / 4);
 border-radius: 0px 0px 4px 4px;
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+}
 .container-icon-social{}
 .team-img { }
 .container-team{padding: 32px 0;}
@@ -330,7 +330,8 @@ height: 40px;
 justify-content: center;
 align-items: center;}
 .icon-href:hover,
-.icon-href:focus {background-color: #404bbf;}
+.icon-href:focus {background-color: #404bbf;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 
 
