--- a/css/style.css
+++ b/css/style.css
@@ -460,13 +460,15 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
                 display: flex;
 
         }
-        .container-footer-wrapper{display: flex;}
+        .container-footer-wrapper{display: flex;
+        align-items: baseline;}
 
-                .container-footer-logo{}
+                .container-footer-logo{margin-right: 120px;}
 
         .footer-container-icon{
         }
-.container-title-footer{display: inline;}
+.container-title-footer{}
+
                 .footer-title{
                     font-size: 16px;
                     line-height: 1.5;
@@ -474,24 +476,27 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
                     font-weight: 500;
                     color: #fff;
                     margin-bottom: 16px;
-                    margin-left: 120px;
+                    
                    
                 }
 
                 .icon-list-footer {display: flex;
-                    margin-left: 120px;
-                    margin-bottom: 132px;
                     gap: 16px;}
         
-                .icon-item-footer {}
+                    .conteiner-icon-p{align-items: baseline}
+                .icon-item-footer {width: 40px;
+                height: 40px;
+            display: flex;}
         
                 .icon-href-footer {display: flex;
                     background-color: #4D5AE5;
                     border-radius: 50%;
-                    width: 40px;
-                    height: 40px;
+                    width: 100%;
+                    height: 100%;
                     justify-content: center;
                     align-items: center;
                 }
+        .icon-href-footer:hover,
+        .icon-href-footer:focus{background-color: #31d0aa;}
         
                 .icon-footer {}
