--- a/css/style.css
+++ b/css/style.css
@@ -433,10 +433,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     /*----------------footer-------------*/
         .footer {background: #2e2f42;
             padding: 100px 0;}
-            
-    .container-footer-wrapper {
-display: flex;
-    align-items: baseline;}
+
+ .container-wpapper-footer{display: flex;
+align-items: baseline;}
     
         .footer-logo {font-family: "Raleway", sans-serif;
             font-weight: 700;
@@ -468,7 +467,8 @@ display: flex;
                 .container-footer-logo{margin-right: 120px;}
 
         .footer-container-icon{
-            
+        
+
         }
 
 
