--- a/css/style.css
+++ b/css/style.css
@@ -498,8 +498,9 @@ align-items: baseline;}
                     height: 100%;
                     justify-content: center;
                     align-items: center;
+                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 }
         .icon-href-footer:hover,
         .icon-href-footer:focus{background-color: #31d0aa;}
         
-                .icon-footer {}
+                .icon-footer {fill:#f4f4fd};
